# aita

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  ROADMAP.md  aita.code-workspace  dev-requirements.txt  flights_api_priceline_com2_auto_complete_Copenhagen.json  flights_api_priceline_com2_auto_complete_Mallorca.json  flights_api_priceline_com2_search_roundtrip.json  pyproject.toml  todo.md
.github/: CONTRIBUTING.md
.github/workflows/: aita_test_ci.yml
app/: cli.py  main.py
app/aita/: cli.py  version.py
app/core/: query_builder.py
docs/: SUMMARY.md  api_analysis.md  architecture.md  example_prompts.md  filters.md  project_structure.md  setup.md
scripts/: doc_generate_project_structure.py  format_and_lint.sh  generate_vscode_settings.py  generate_vscode_settings.sh  run_app.sh  run_tests.sh  setup_python.sh
src/aita/: main.py
src/aita/api/: flights_api.py  flights_api_priceline_com2.py  flights_api_priceline_com2_auto-complete_Copenhagen.json  flights_api_priceline_com2_auto-complete_Mallorca.json  flights_api_priceline_com2_search-roundtrip_.json  hotels_api.py
src/aita/core/: combo_engine.py  filters.py  prompt_parser.py  query_builder.py  query_dates.py  results_builder.py
test/: applicable_tests.json  conftest.py  test_combo_engine.py  test_filters.py  test_flights_api.py  test_flights_api_priceline_com2.py  test_hotels_api.py  test_main.py  test_prompt_parser.json  test_prompt_parser.py  test_prompts.json  test_query_builder.py  test_query_dates.json  test_query_dates.py
test/api/: test_flights_api.py  test_flights_api_priceline_com2.py  test_hotels_api.py
test/core/: test_combo_engine.py  test_filters.json  test_filters.py  test_query_builder.py  test_query_dates.py
tools/linux/vscode/: aita.code-profile
tools/vscode/: aita.code-profile
