[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aita"
version = "0.1.0"
description = "AitA - AI Travel Assistant"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv",
  "requests",
  # Any other runtime dependencies here
]

[project.scripts]
aita = "aita.main:main"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-mock",
  "pytest-html",
  "ipython",
  # Add any other testing-related tools/dependencies here
]

[tool.hatch.envs.default.scripts]
test = "pytest"

[tool.pytest.ini_options]
testpaths = ["test"] # same than 'pytest test'
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = """
  -vv
  --strict-config
  --strict-markers
  --html=test/reports/report.html
  """ # Add -s to debug with print()
